// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie details component should have image 1`] = `
<article
  className="py-3"
>
  <img
    className="float-left pr-2"
    src="https://image.mock.api/big/q0R4crx2SehcEEQEkYObktdeFy.jpg"
  />
  <dl>
    <dd
      className="float-left mb-0 mr-2"
    >
      Rating:
    </dd>
    <dt>
      6.4
       (
      4412
       votes)
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Genres:
    </dd>
    <dt>
      Family, Animation, Adventure, Comedy
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Release date:
    </dd>
    <dt>
      2015-06-17
    </dt>
  </dl>
  <p
    className="text-justify m-0"
  >
    Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.
  </p>
</article>
`;

exports[`Movie details component should not have image 1`] = `
<article
  className="py-3"
>
  
  <dl>
    <dd
      className="float-left mb-0 mr-2"
    >
      Rating:
    </dd>
    <dt>
      6.4
       (
      4412
       votes)
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Genres:
    </dd>
    <dt>
      Family, Animation, Adventure, Comedy
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Release date:
    </dd>
    <dt>
      2015-06-17
    </dt>
  </dl>
  <p
    className="text-justify m-0"
  >
    Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.
  </p>
</article>
`;
